Added mongodb as persistence.