@@ -5,7 +5,7 @@ plugins {
 
 group 'com.kontomatik'
 version '1.0-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = JavaVersion.VERSION_17
 
 repositories {
   mavenCentral()
@@ -25,4 +25,9 @@ dependencies {
 
 test {
   useJUnitPlatform()
+  jvmArgs(['--enable-preview'])
+}
+
+tasks.withType(JavaCompile).each {
+  it.options.compilerArgs.add('--enable-preview')
 }
